--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -181,5 +181,16 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </FrameLayout>
+    <FrameLayout
+        android:id="@+id/framelayoutActorfav"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible">
+
+        <include
+            layout="@layout/infoactorfav"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
