--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -170,16 +170,57 @@
                         android:layout_width="260dp"
                         android:layout_height="21dp" />
 
-                    <com.google.android.material.floatingactionbutton.FloatingActionButton
-                        android:id="@+id/floatingActionButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:layout_marginBottom="20dp"
-                        android:clickable="true"
-                        app:backgroundTint="#D60000"
-                        app:rippleColor="#ECE8E8"
-                        app:srcCompat="@drawable/mas" />
+                        android:layout_margin="10dp"
+                        android:foregroundGravity="center_horizontal"
+                        android:gravity="center_horizontal"
+                        android:orientation="horizontal">
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/floatingActionButtonTrailer"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            app:backgroundTint="#FF0000"
+                            app:srcCompat="@drawable/baseline_play_circle_outline_24" />
+
+                        <Space
+                            android:layout_width="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/floatingActionButton"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_margin="10dp"
+                            android:layout_marginBottom="20dp"
+                            android:clickable="true"
+                            app:backgroundTint="#FF0000"
+                            app:rippleColor="#ECE8E8"
+                            app:srcCompat="@drawable/mas" />
+
+                        <Space
+                            android:layout_width="10dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1" />
+
+                        <com.google.android.material.floatingactionbutton.FloatingActionButton
+                            android:id="@+id/floatingActionButton3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
+                            android:layout_weight="1"
+                            android:clickable="true"
+                            app:backgroundTint="#FF0000"
+                            app:srcCompat="@android:drawable/ic_dialog_info" />
+                    </LinearLayout>
 
                     <TextView
                         android:id="@+id/txActores"
@@ -204,12 +245,6 @@
                         android:textColor="#FFFFFF"
                         android:textSize="30dp" />
 
-                    <FrameLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-
-                    </FrameLayout>
-
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rv_recomendaciones"
                         android:layout_width="wrap_content"
@@ -222,17 +257,5 @@
 
     </LinearLayout>
 
-    <FrameLayout
-        android:id="@+id/framelayoutFloatingB"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="invisible">
-
-        <include
-            layout="@layout/floating_menu"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
