--- a/app/src/main/res/layout/infoactorfav.xml
+++ b/app/src/main/res/layout/infoactorfav.xml
@@ -109,7 +109,10 @@
                         android:id="@+id/biografiaActorFav"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="TextView" />
+                        android:layout_margin="10dp"
+                        android:text="TextView"
+                        android:textColor="#FFFFFF"
+                        android:textSize="16dp" />
 
                 </LinearLayout>
 
