copia tfg 31/05/23  //funciona todo , voy a empezar a reorganizar el codigo , volver aqui si se me lia//

--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -219,7 +219,7 @@
                             android:layout_weight="1"
                             android:clickable="true"
                             app:backgroundTint="#FF0000"
-                            app:srcCompat="@android:drawable/ic_dialog_info" />
+                            app:srcCompat="@drawable/baseline_insert_photo_24" />
                     </LinearLayout>
 
                     <TextView
