--- a/app/src/main/res/layout/busqueda_layout.xml
+++ b/app/src/main/res/layout/busqueda_layout.xml
@@ -85,8 +85,8 @@
             </FrameLayout>
 
             <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -100,6 +100,15 @@
                     tools:ignore="MissingConstraints" />
             </LinearLayout>
 
+            <ImageView
+                android:id="@+id/imagenbusqueda"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:foregroundGravity="center"
+                android:paddingTop="50dp"
+                app:srcCompat="@drawable/iconopalomitasbusca" />
+
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -112,16 +121,5 @@
 
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/imagenbusqueda"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="140dp"
-        android:foregroundGravity="center"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/iconopalomitas" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
