--- a/app/src/main/res/layout/perfil.xml
+++ b/app/src/main/res/layout/perfil.xml
@@ -18,14 +18,17 @@
             android:layout_width="match_parent"
             android:layout_height="36dp" />
 
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:gravity="right">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
                 android:orientation="vertical"
                 android:padding="15dp">
 
@@ -33,10 +36,8 @@
                     android:id="@+id/gmailtxv"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
                     android:fontFamily="@font/roboto_condensed_bold"
-                    android:gravity="center|center_horizontal|center_vertical"
+                    android:gravity="center"
                     android:text="gmail"
                     android:textColor="#FFFFFF"
                     android:textSize="20sp" />
@@ -44,9 +45,8 @@
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
-                android:layout_width="80dp"
+                android:layout_width="wrap_content"
                 android:layout_height="80dp"
-                android:layout_gravity="center"
                 android:layout_margin="8dp"
                 app:cardCornerRadius="40dp">
 
@@ -54,16 +54,14 @@
                     android:id="@+id/profile_image"
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:layout_weight="1"
                     android:clipToOutline="true"
                     android:foreground="@drawable/circulin"
                     android:padding="2dp"
-                    android:paddingLeft="20dp"
                     android:scaleType="fitXY"
                     android:src="@drawable/iconoperfil" />
             </androidx.cardview.widget.CardView>
-
         </LinearLayout>
+
 
         <ScrollView
             android:layout_width="match_parent"
