copia tfg 12/06/23  //funciona todo ,version final de momento//

--- a/app/src/main/res/layout/busqueda_layout.xml
+++ b/app/src/main/res/layout/busqueda_layout.xml
@@ -41,11 +41,13 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
+                    android:autofillHints=""
                     android:background="@null"
                     android:hint="Buscar titulo pelicula..."
                     android:imeOptions="actionSearch"
                     android:inputType="text"
                     android:maxLines="1"
+                    android:minHeight="48dp"
                     android:padding="10dp"
                     android:singleLine="true"
                     android:textColor="@android:color/white"
