--- a/app/src/main/res/layout/floating_menu.xml
+++ b/app/src/main/res/layout/floating_menu.xml
@@ -19,7 +19,8 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/eye" />
+        app:srcCompat="@drawable/eye"
+        android:contentDescription="TODO" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/FBpendientes"
@@ -31,7 +32,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/addtoqueue" />
+        app:srcCompat="@drawable/addtoqueue"
+        android:contentDescription="TODO" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/FBfavoritas"
@@ -44,5 +46,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/star" />
+        app:srcCompat="@drawable/star"
+        android:contentDescription="TODO" />
 </androidx.constraintlayout.widget.ConstraintLayout>
