--- a/app/src/main/res/layout/fragmentlogin.xml
+++ b/app/src/main/res/layout/fragmentlogin.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
-    android:background="@drawable/pelis">
+    android:background="@drawable/fondoprueba">
 
     <LinearLayout
         android:layout_width="350dp"
