--- a/app/src/main/res/layout/infoactorfav.xml
+++ b/app/src/main/res/layout/infoactorfav.xml
@@ -80,6 +80,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
+                            android:contentDescription="@string/ACTORES"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:gravity="center"
                             android:text=" "
