--- a/app/src/main/res/layout/star_layout.xml
+++ b/app/src/main/res/layout/star_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
     <ImageView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -8,5 +9,6 @@
         android:layout_height="wrap_content"
         android:layout_margin="2dp"
         android:src="@drawable/star"
-        android:contentDescription="" />
+        android:contentDescription=""
+        tools:ignore="MissingConstraints" />
 </androidx.constraintlayout.widget.ConstraintLayout>
