copia tfg 14/06/23  //funciona todo ,version final de momento//

--- a/app/src/main/res/layout/info_peliculas.xml
+++ b/app/src/main/res/layout/info_peliculas.xml
@@ -70,7 +70,7 @@
                             android:id="@+id/valoracionpeli"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center"
+                            android:layout_gravity="right"
                             android:layout_marginStart="15dp"
                             android:fontFamily="@font/roboto_condensed_bold"
                             android:text="TextView"
@@ -82,12 +82,12 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:layout_weight="1"
                             app:srcCompat="@drawable/star" />
 
                         <Space
                             android:layout_width="22dp"
                             android:layout_height="match_parent"
+                            android:layout_gravity="center"
                             android:layout_weight="1" />
 
                         <TextView
